Commit translated content

--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -3,7 +3,7 @@ documentType: LandingData
 title: Azure Container Service (AKS)
 metadata:
   document_id: 
-  title: "Dokumentation om Azure Container Service (AKS) – Självstudier, API-referens | Microsoft Docs"
+  title: Dokumentation om Azure Container Service (AKS) – Självstudier, API-referens | Microsoft Docs
   meta.description: AKS allows you to quickly deploy a production ready Kubernetes cluster in Azure. Learn how to use AKS with these quickstarts, tutorials, and samples.
   services: container-service
   author: carolz
@@ -14,18 +14,18 @@ metadata:
   ms.topic: landing-page
   ms.date: 07-21-2017
   ms.author: carolz
-  ms.openlocfilehash: effec3747fef172e3124c4d2ea6fef86b0b80590
-  ms.sourcegitcommit: b83781292640e82b5c172210c7190cf97fabb704
+  ms.openlocfilehash: a381697e27a2d85d99fcbb1eb54bd7c0ab7d743a
+  ms.sourcegitcommit: 9cdd83256b82e664bd36991d78f87ea1e56827cd
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 10/27/2017
+  ms.lasthandoff: 04/16/2018
 abstract:
-  description: "Azure Container Service (AKS) hanterar din värdmiljö för Kubernetes, vilket gör det enkelt att snabbt distribuera och hantera behållarbaserade program utan kunskaper om orkestrering av behållare. Det eliminerar också problem med pågående åtgärder och underhåll genom etablering, uppgradering och skalning av resurser på begäran, utan att koppla från dina program."
+  description: Azure Container Service (AKS) hanterar din värdmiljö för Kubernetes, vilket gör det enkelt att snabbt distribuera och hantera behållarbaserade program utan kunskaper om orkestrering av behållare. Det eliminerar också problem med pågående åtgärder och underhåll genom etablering, uppgradering och skalning av resurser på begäran, utan att koppla från dina program.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du distribuerar ett AKS-kluster:"
+    text: 'Lär dig hur du distribuerar ett AKS-kluster:'
   - type: list
     style: icon48
     items:
@@ -33,20 +33,20 @@ sections:
         src: /azure/media/index/ContainerService.svg
       text: Skapa ett AKS-kluster
       href: /azure/aks/kubernetes-walkthrough
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig att distribuera, hantera och uppdatera program på ett AKS-kluster."
+    text: Lär dig att distribuera, hantera och uppdatera program på ett AKS-kluster.
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"/azure/aks/tutorial-kubernetes-prepare-app\">Skapa behållaravbildningar från ett program (Create container images from an application)</a>"
-    - html: "<a href=\"/azure/aks/tutorial-kubernetes-prepare-acr\">Ladda upp behållaravbildningar till Azure Container Registry (Upload container images to the Azure Container Registry)</a>"
+    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Skapa behållaravbildningar från ett program (Create container images from an application)</a>
+    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-acr">Ladda upp behållaravbildningar till Azure Container Registry (Upload container images to the Azure Container Registry)</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-deploy-cluster">Distribuera ett AKS-kluster</a>
-    - html: "<a href=\"/azure/aks/tutorial-kubernetes-deploy-application\">Kör dina behållaravbildningar i Kubernetes (Run your container images in Kubernetes)</a>"
+    - html: <a href="/azure/aks/tutorial-kubernetes-deploy-application">Kör dina behållaravbildningar i Kubernetes (Run your container images in Kubernetes)</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-scale">Skala ett program och Kubernetes-infrastruktur (Scale an application and Kubernetes infrastructure)</a>
-    - html: "<a href=\"/azure/aks/tutorial-kubernetes-app-update\">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>"
-    - html: "<a href=\"/azure/aks/tutorial-kubernetes-monitor\">Övervaka Kubernetes med OMS (Monitor Kubernetes with OMS)</a>"
+    - html: <a href="/azure/aks/tutorial-kubernetes-app-update">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>
+    - html: <a href="/azure/aks/tutorial-kubernetes-monitor">Övervaka Kubernetes med Log Analytics</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-upgrade-cluster">Uppgradera AKS-kluster</a>
 - title: Referens
   items:
