--- a/articles/active-directory/TOC.yml
+++ b/articles/active-directory/TOC.yml
@@ -1,37 +1,37 @@
 - name: Översikt över att hantera åtkomst
-  href: manage-access-to-azure-resources.md
+  href: ../role-based-access-control/manage-access-to-azure-resources.md
 - name: Resursåtkomst i Azure
-  href: active-directory-understanding-resource-access.md
+  href: ../role-based-access-control/rbac-and-directory-admin-roles.md
 - name: Rollbaserad åtkomstkontroll (RBAC)
-  href: role-based-access-control-what-is.md
+  href: ../role-based-access-control/overview.md
   items:
     - name: Hantera rolltilldelningar
       items:
         - name: Efter användare
-          href: role-based-access-control-manage-assignments.md
+          href: ../role-based-access-control/role-assignments-users.md
         - name: Efter resurs
-          href: role-based-access-control-configure.md
+          href: ../role-based-access-control/role-assignments-portal.md?toc=%2fazure%2factive-directory%2ftoc.json
         - name: Med Azure CLI
-          href: role-based-access-control-manage-access-azure-cli.md
+          href: ../role-based-access-control/role-assignments-cli.md
         - name: Med PowerShell
-          href: role-based-access-control-manage-access-powershell.md
+          href: ../role-based-access-control/role-assignments-powershell.md
         - name: Med REST
-          href: role-based-access-control-manage-access-rest.md
+          href: ../role-based-access-control/role-assignments-rest.md
     - name: Inbyggda roller
-      href: role-based-access-built-in-roles.md
+      href: ../role-based-access-control/built-in-roles.md
     - name: Anpassade roller
-      href: role-based-access-control-custom-roles.md
+      href: ../role-based-access-control/custom-roles.md
     - name: Tilldela anpassade roller för interna och externa användare
-      href: role-based-access-control-create-custom-roles-for-internal-external-users.md
+      href: ../role-based-access-control/role-assignments-external-users.md
     - name: Rapportering
-      href: role-based-access-control-access-change-history-report.md
+      href: ../role-based-access-control/change-history-report.md
     - name: Öka administratörsåtkomst till klientorganisation
-      href: role-based-access-control-tenant-admin-access.md
+      href: ../role-based-access-control/elevate-access-global-admin.md
     - name: Felsöka
-      href: role-based-access-control-troubleshooting.md
+      href: ../role-based-access-control/troubleshooting.md
     - name: Åtgärder för resursprovider
-      href: role-based-access-control-resource-provider-operations.md
+      href: ../role-based-access-control/resource-provider-operations.md
 - name: Privileged Identity Management (PIM) för RBAC
-  href: pim-azure-resource.md
+  href: ../role-based-access-control/pim-azure-resource.md
 - name: Villkorlig åtkomst för hantering av Azure
-  href: conditional-access-azure-management.md
+  href: ../role-based-access-control/conditional-access-azure-management.md
