--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -29,6 +29,10 @@
       href: ensure-tags-exists-on-new-virtual-machines.md
 - name: Exempel
   items:
+    - name: Azure CLI
+      href: cli-samples.md
+    - name: Azure PowerShell
+      href: powershell-samples.md
     - name: Mallar för Resurshanteraren
       href: template-samples.md
 - name: Begrepp
