--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -69,6 +69,8 @@
       items:
         - name: JavaScript
           href: app-insights-javascript.md
+    - name: Övervaka Azure Functions
+      href: 'https://docs.microsoft.com/azure/azure-functions/functions-monitoring'
     - name: Övervaka andra plattformar
       items:
         - name: SharePoint-webbplatser
