--- a/articles/active-directory/managed-service-identity/TOC.yml
+++ b/articles/active-directory/managed-service-identity/TOC.yml
@@ -9,6 +9,34 @@
               href: tutorial-windows-vm-access-arm.md
             - name: Virtuell Linux-dator
               href: tutorial-linux-vm-access-arm.md
+    - name: Självstudier
+      items:
+        - name: Windows VM/VMSS
+          items:
+            - name: Få åtkomst till Azure Data Lake Store
+              href: tutorial-windows-vm-access-datalake.md
+            - name: Få åtkomst till Azure Storage med en åtkomstnyckel
+              href: tutorial-windows-vm-access-storage.md
+            - name: Få åtkomst till Azure Storage med SAS
+              href: tutorial-windows-vm-access-storage-sas.md
+            - name: Få åtkomst till Azure SQL
+              href: tutorial-windows-vm-access-sql.md
+            - name: Få åtkomst till Azure Key Vault
+              href: tutorial-windows-vm-access-nonaad.md
+            - name: Få åtkomst till Azure Cosmos DB
+              href: tutorial-windows-vm-access-cosmos-db.md
+        - name: Linux VM/VMSS
+          items:
+            - name: Få åtkomst till Azure Data Lake Store
+              href: tutorial-linux-vm-access-datalake.md
+            - name: Få åtkomst till Azure Storage med en åtkomstnyckel
+              href: tutorial-linux-vm-access-storage-access-key.md
+            - name: Få åtkomst till Azure Storage med SAS
+              href: tutorial-linux-vm-access-storage-sas.md
+            - name: Få åtkomst till Azure Key Vault
+              href: tutorial-linux-vm-access-nonaad.md
+            - name: Få åtkomst till Azure Cosmos DB
+              href: tutorial-linux-vm-access-cosmos-db.md
     - name: Konfigurera MSI för en virtuell Azure-dator
       items:
         - name: Använda Azure Portal
@@ -45,30 +73,6 @@
           href: how-to-use-vm-sign-in.md
         - name: 'Använda med Azure-SDK:er'
           href: how-to-use-vm-sdk.md
-    - name: Använda en Windows VM-/VMSS-hanterad identitet
-      items:
-        - name: Få åtkomst till Azure Data Lake Store
-          href: tutorial-windows-vm-access-datalake.md
-        - name: Få åtkomst till Azure SQL
-          href: tutorial-windows-vm-access-sql.md
-        - name: Få åtkomst till Azure Storage med en åtkomstnyckel
-          href: tutorial-windows-vm-access-storage.md
-        - name: Få åtkomst till Azure Storage med SAS
-          href: tutorial-windows-vm-access-storage-sas.md
-        - name: Få åtkomst till Azure Key Vault
-          href: tutorial-windows-vm-access-nonaad.md
-    - name: Använda en Linux VM-/VMSS-hanterad identitet
-      items:
-        - name: Få åtkomst till Azure Data Lake Store
-          href: tutorial-linux-vm-access-datalake.md
-        - name: Få åtkomst till Azure Storage med en åtkomstnyckel
-          href: tutorial-linux-vm-access-storage.md
-        - name: Få åtkomst till Azure Storage med SAS
-          href: tutorial-linux-vm-access-storage-sas.md
-        - name: Få åtkomst till Azure Key Vault
-          href: tutorial-linux-vm-access-nonaad.md
-        - name: Få åtkomst till Azure Cosmos DB
-          href: tutorial-linux-vm-access-cosmos-db.md
     - name: Vanliga frågor och kända problem
       href: known-issues.md
     - name: Referens
