--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -374,7 +374,9 @@
           href: manage-azure-ssis-integration-runtime.md
         - name: Konfigurera prestandainställningar för Azure SSIS Integration Runtime
           href: configure-azure-ssis-integration-runtime-performance.md
-        - name: Anropa SSIS-paket med hjälp av en lagrad proceduraktivitet
+        - name: Köra SSIS-paket med SSIS-aktivitet
+          href: how-to-invoke-ssis-package-ssis-activity.md
+        - name: Köra SSIS-paket med hjälp av en lagrad proceduraktivitet
           href: how-to-invoke-ssis-package-stored-procedure-activity.md
         - name: Schemalägga Azure SSIS Integration Runtime
           href: how-to-schedule-azure-ssis-integration-runtime.md
