--- a/articles/location-based-services/index.yml
+++ b/articles/location-based-services/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Dokumentation om Azure Location Based Services (förhandsversion)"
+title: Dokumentation om Azure Location Based Services (förhandsversion)
 metadata:
   document_id: 
-  title: "Dokumentation om Azure Location Based Services (förhandsversion) | Microsoft Docs"
+  title: Dokumentation om Azure Location Based Services (förhandsversion) | Microsoft Docs
   meta.description: Use Azure Location Based Services (preview) to provide geospatial services to your web or mobile application.
   services: location-based-services
   author: philmea
@@ -14,18 +14,18 @@ metadata:
   ms.topic: landing-page
   ms.date: 11/22/2017
   ms.author: philmea
-  ms.openlocfilehash: 0b9146284f12cdb39edb870779d911053d1f233a
-  ms.sourcegitcommit: 48fce90a4ec357d2fb89183141610789003993d2
+  ms.openlocfilehash: afd5a0c6167e89b1c4657ef1211a02d1a0807782
+  ms.sourcegitcommit: 1362e3d6961bdeaebed7fb342c7b0b34f6f6417a
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/12/2018
+  ms.lasthandoff: 04/18/2018
 abstract:
-  description: "Azure Location Based Services (förhandsversion) ger utvecklare från alla branscher kraftfulla geospatiala funktioner med nya mappningsdata som krävs för att tillhandahålla geografisk kontext till webb- och mobilprogram. Den här tjänsten är en uppsättning REST API:er som är kompatibla med Azure One API och som åtföljs av en webbaserad JavaScript-kontroll som gör utveckling över flera medier enkelt, flexibelt och portabelt."
+  description: Azure Location Based Services (förhandsversion) ger utvecklare från alla branscher kraftfulla geospatiala funktioner med nya mappningsdata som krävs för att tillhandahålla geografisk kontext till webb- och mobilprogram. Den här tjänsten är en uppsättning REST API:er som är kompatibla med Azure One API och som åtföljs av en webbaserad JavaScript-kontroll som gör utveckling över flera medier enkelt, flexibelt och portabelt.
 sections:
-- title: "Snabbstarter på fem minuter"
+- title: Snabbstarter på fem minuter
   items:
   - type: paragraph
-    text: "Starta en app för kartsökning med Azure Location Based Services (förhandsversion)."
+    text: Starta en app för kartsökning med Azure Location Based Services (förhandsversion).
   - type: list
     style: icon48
     items:
@@ -33,23 +33,23 @@ sections:
         src: /azure/sql-database/media/index/portal.svg
       text: Starta demonstration av en kartapp
       href: /azure/location-based-services/quick-demo-map-app
-- title: "Stegvisa självstudier"
+- title: Stegvisa självstudier
   items:
   - type: paragraph
-    text: "Skapa ett geospatialt webbprogram för att söka efter orienteringspunkter och dirigera till platser med hjälp av Azure Location Based Services (förhandsversion)."
+    text: Skapa ett geospatialt webbprogram för att söka efter orienteringspunkter och dirigera till platser med hjälp av Azure Location Based Services (förhandsversion).
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"/azure/location-based-services/tutorial-search-location\">Sök efter orienteringspunkter</a>"
+    - html: <a href="/azure/location-based-services/tutorial-search-location">Sök efter orienteringspunkter</a>
     - html: <a href="/azure/location-based-services/tutorial-route-location">Dirigera till en orienteringspunkt</a>
-    - html: "<a href=\"/azure/location-based-services/tutorial-prioritized-routes\">Vägar efter färdsätt</a>"
+    - html: <a href="/azure/location-based-services/tutorial-prioritized-routes">Vägar efter färdsätt</a>
 - title: Referens
   items:
   - type: list
     style: cards
     className: cardsW
     items:
-    - title: "Språk"
-      html: "<p><a href=\"https://docs.microsoft.com/javascript/api/location-based-services-javascript/\">API för kartkontroll – Javascript</a></p>"
+    - title: Språk
+      html: <p><a href="https://docs.microsoft.com/javascript/api/location-based-services-javascript/">API för kartkontroll – Javascript</a></p>
     - title: REST
-      html: "<p><a href=\"https://docs.microsoft.com/rest/api/location-based-services/\">Funktions-API – REST</a></p><p><a href=\"https://docs.microsoft.com/rest/api/location-based-services-management/\">API för hantering – REST</a></p>"
+      html: <p><a href="https://docs.microsoft.com/rest/api/location-based-services/">Funktions-API – REST</a></p><p><a href="https://docs.microsoft.com/rest/api/location-based-services-management/">API för hantering – REST</a></p>
