--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -2,8 +2,8 @@
 documentType: LandingData
 title: Dokumentation om Azure Machine Learning
 metadata:
-  title: "Dokumentation om Azure Machine Learning – självstudier, API-referens"
-  description: "Dokumentation, videor och exempelmodeller för Machine Learning, en molntjänst för dataexperter och utvecklare som använder förutsägande analyser i sina program."
+  title: Dokumentation om Azure Machine Learning – självstudier, API-referens
+  description: Dokumentation, videor och exempelmodeller för Machine Learning, en molntjänst för dataexperter och utvecklare som använder förutsägande analyser i sina program.
   services: machine-learning
   author: garyericson
   manager: jhubbard
@@ -13,13 +13,13 @@ metadata:
   ms.topic: landing-page
   ms.date: 02/01/2018
   ms.author: garye
-  ms.openlocfilehash: 3303174486e9fd7a5b0f6dfe713be93e569a80a7
-  ms.sourcegitcommit: b32d6948033e7f85e3362e13347a664c0aaa04c1
+  ms.openlocfilehash: 6bfeb53dccd9d281cd467b8261eff5cd47cb4dfb
+  ms.sourcegitcommit: 59914a06e1f337399e4db3c6f3bc15c573079832
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 02/13/2018
+  ms.lasthandoff: 04/19/2018
 abstract:
-  description: "Lär dig hur du använder Azure Machine Learning med dess fullständigt hanterade tjänster för att skapa, distribuera och hantera maskininlärnings- och AI-modeller i molnet. Självstudier, snabbstarter, referenser och exempel visar dig hur du skapar och distribuerar modeller för alla program."
+  description: Lär dig hur du använder Azure Machine Learning med dess fullständigt hanterade tjänster för att skapa, distribuera och hantera maskininlärnings- och AI-modeller i molnet. Självstudier, snabbstarter, referenser och exempel visar dig hur du skapar och distribuerar modeller för alla program.
 sections:
 - title: 
   items:
@@ -27,13 +27,13 @@ sections:
     style: cards
     className: cardsA
     items:
-    - html: "<a href=\"/azure/machine-learning/preview/\"> <img height=\"48\" width=\"48\" src=\"/azure/machine-learning/media/index/i_machine-learning.svg\" alt=\"Azure Machine Learning services\"> (förhandsgranskning) <br><b>Azure Machine Learning-tjänster</b></a> <p>Lär dig hur de här tjänsterna hjälper dataforskare att utveckla AI-lösningar med Python-verktyg och -bibliotek med en mängd olika tjänster för data och beräkning på Azure.</p>"
-    - html: "<a href=\"/azure/machine-learning/studio/\"> <img height=\"48\" width=\"48\" src=\"/azure/machine-learning/media/index/machine-learning-studio.svg\" alt=\"Azure Machine Learning Studio\"> <br><b>Azure Machine Learning Studio</b></a> <p>Lär dig hur du använder detta dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data.</p>"
-    - html: "<a href=\"/azure/machine-learning/data-science-virtual-machine/index\"> <img height=\"48\" width=\"48\" src=\"/azure/machine-learning/media/index/virtualmachine.svg\" alt=\"Data Science Virtual Machine\"> <br><b>Virtuell dator för datavetenskap</b></a> <p>Lär dig hur du använder de virtuella datorerna för datavetenskap och djupinlärning på Azure och de verktyg för datavetenskap som används för att skapa intelligenta program för avancerade analyser.</p>"
-- title: "Snabbstarter på 5 minuter"
+    - html: <a href="/azure/machine-learning/service/"> <img height="48" width="48" src="/azure/machine-learning/media/index/i_machine-learning.svg" alt="Azure Machine Learning services"> (förhandsversion) <br><b>Azure Machine Learning-tjänster</b></a> <p>Lär dig hur de här tjänsterna hjälper dataforskare att utveckla AI-lösningar med Python-verktyg och -bibliotek med en mängd olika tjänster för data och beräkning på Azure.</p>
+    - html: <a href="/azure/machine-learning/studio/"> <img height="48" width="48" src="/azure/machine-learning/media/index/machine-learning-studio.svg" alt="Azure Machine Learning Studio"> <br><b>Azure Machine Learning Studio</b></a> <p>Lär dig hur du använder detta dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data.</p>
+    - html: <a href="/azure/machine-learning/data-science-virtual-machine/index"> <img height="48" width="48" src="/azure/machine-learning/media/index/virtualmachine.svg" alt="Data Science Virtual Machine"> <br><b>Virtuell dator för datavetenskap</b></a> <p>Lär dig hur du använder de virtuella datorerna för datavetenskap och djupinlärning på Azure och de verktyg för datavetenskap som används för att skapa intelligenta program för avancerade analyser.</p>
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du snabbt konfigurerar och använder Azure Machine Learning-tjänster (förhandsgranskning), Studio och virtuella datorer för datavetenskap:"
+    text: 'Lär dig hur du snabbt konfigurerar och använder Azure Machine Learning-tjänster (förhandsgranskning), Studio och virtuella datorer för datavetenskap:'
   - type: table
     style: dataMatrix
     columns:
@@ -46,18 +46,18 @@ sections:
     rows:
     - title: Konfiguration
       values:
-      - href: /azure/machine-learning/preview/quickstart-installation
+      - href: /azure/machine-learning/service/quickstart-installation
       - href: /azure/machine-learning/studio/create-workspace
       - href: /azure/machine-learning/data-science-virtual-machine/provision-vm
     - title: Skapa en modell
       values:
-      - href: /azure/machine-learning/preview/quickstart-installation
+      - href: /azure/machine-learning/service/quickstart-installation
       - href: /azure/machine-learning/studio/create-experiment
       - href: 
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig att skapa, distribuera och använda modeller med Azure Machine Learning-tjänster (förhandsgranskning) och Studio:"
+    text: 'Lär dig att skapa, distribuera och använda modeller med Azure Machine Learning-tjänster (förhandsgranskning) och Studio:'
   - type: table
     style: dataMatrix
     columns:
@@ -66,21 +66,21 @@ sections:
     - image:
         src: media/index/machine-learning-studio.svg
     rows:
-    - title: "Förbereda data"
+    - title: Förbereda data
       values:
-      - href: /azure/machine-learning/preview/tutorial-classifying-iris-part-1
+      - href: /azure/machine-learning/desktop-workbench/tutorial-classifying-iris-part-1
       - href: /azure/machine-learning/studio/walkthrough-2-upload-data
     - title: Skapa en modell
       values:
-      - href: /azure/machine-learning/preview/tutorial-classifying-iris-part-2
+      - href: /azure/machine-learning/desktop-workbench/tutorial-classifying-iris-part-2
       - href: /azure/machine-learning/studio/walkthrough-3-create-new-experiment
     - title: Operationalisera en modell
       values:
-      - href: /azure/machine-learning/preview/tutorial-classifying-iris-part-3
+      - href: /azure/machine-learning/desktop-workbench/tutorial-classifying-iris-part-3
       - href: /azure/machine-learning/studio/walkthrough-5-publish-web-service
-    - title: "Använda en modell"
+    - title: Använda en modell
       values:
-      - href: /azure/machine-learning/preview/model-management-consumption
+      - href: /azure/machine-learning/desktop-workbench/model-management-consumption
       - href: /azure/machine-learning/studio/walkthrough-6-access-web-service
 - title: Fler Microsoft Machine Learning-tekniker
   items:
@@ -88,9 +88,9 @@ sections:
     style: cards
     className: cardsA
     items:
-    - html: "<a href=\"/azure/machine-learning/team-data-science-process\"> <img src=\"media/index/tdsp.png\" alt=\"Team Data Science Process\" height=\"32\" width=\"32\"> <p><b>TDSP</b></p> </a> En samarbetsbaserad datavetenskapsmetod som hjälper olika team att leverera prediktiva analyslösningar och intelligenta program effektivt."
-    - html: "<a href=\"/sql/advanced-analytics/r/r-services\"> <img src=\"media/index/logo_sql.png\" alt=\"SQL Server Machine Learning Services\" height=\"32\" width=\"32\"> <p><b>SQL Server Machine Learning Services</b></p> </a> Analys i databasen med stöd för både R och Python."
-    - html: "<a href=\"/machine-learning-server/\"> <img src=\"media/index/ml-server.png\" alt=\"Microsoft Machine Learning Server\" height=\"32\" width=\"32\"> <p><b>Microsoft Machine Learning Server</b></p> </a> En flexibel maskininlärningsplattform för företag med stöd för R- och Python-distributioner på Windows, Linux samt HDInsight Spark- och Hadoop-kluster."
-    - html: "<a href=\"/azure/batch-ai/\"> <img src=\"media/index/batch.png\" alt=\"Batch AI Training\" height=\"32\" width=\"32\"> <p><b>Batch AI Training</b></p> </a> En hanterad tjänst som hjälper dig att experimentera parallellt med dina AI-modeller med valfritt ramverk och sedan träna dem i stor skala över klustrade GPU:er."
-    - html: "<a href=\"/azure/#pivot=products&panel=cognitive\"> <img src=\"media/index/cognitive-services.png\" alt=\"Cognitive Services\" height=\"32\" width=\"32\"> <p><b>Cognitive Services</b></p> </a> API:er som tillhandahåller intelligenta algoritmer för dina appar, webbplatser och robotar."
-    - html: "<a href=\"/cognitive-toolkit/\"> <img src=\"media/index/cntk.png\" alt=\"Microsoft Cognitive Toolkit\" height=\"32\" width=\"32\"> <p><b>Microsoft Cognitive Toolkit</b></p> </a> Kostnadsfria verktyg med öppen källkod för att träna algoritmer för djupinlärning."
+    - html: <a href="/azure/machine-learning/team-data-science-process"> <img src="media/index/tdsp.png" alt="Team Data Science Process" height="32" width="32"> <p><b>TDSP</b></p> </a> En samarbetsbaserad datavetenskapsmetod som hjälper olika team att leverera prediktiva analyslösningar och intelligenta program effektivt.
+    - html: <a href="/sql/advanced-analytics/r/r-services"> <img src="media/index/logo_sql.png" alt="SQL Server Machine Learning Services" height="32" width="32"> <p><b>SQL Server Machine Learning Services</b></p> </a> Analys i databasen med stöd för både R och Python.
+    - html: <a href="/machine-learning-server/"> <img src="media/index/ml-server.png" alt="Microsoft Machine Learning Server" height="32" width="32"> <p><b>Microsoft Machine Learning Server</b></p> </a> En flexibel maskininlärningsplattform för företag med stöd för R- och Python-distributioner på Windows, Linux samt HDInsight Spark- och Hadoop-kluster.
+    - html: <a href="/azure/batch-ai/"> <img src="media/index/batch.png" alt="Batch AI Training" height="32" width="32"> <p><b>Batch AI Training</b></p> </a> En hanterad tjänst som hjälper dig att experimentera parallellt med dina AI-modeller med valfritt ramverk och sedan träna dem i stor skala över klustrade GPU:er.
+    - html: <a href="/azure/#pivot=products&panel=cognitive"> <img src="media/index/cognitive-services.png" alt="Cognitive Services" height="32" width="32"> <p><b>Cognitive Services</b></p> </a> API:er som tillhandahåller intelligenta algoritmer för dina appar, webbplatser och robotar.
+    - html: <a href="/cognitive-toolkit/"> <img src="media/index/cntk.png" alt="Microsoft Cognitive Toolkit" height="32" width="32"> <p><b>Microsoft Cognitive Toolkit</b></p> </a> Kostnadsfria verktyg med öppen källkod för att träna algoritmer för djupinlärning.
