--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -126,6 +126,8 @@
               href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
             - name: Aktivera och visa mått
               href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: Migrera till nya lagringsmått
+              href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Överföra data
       items:
         - name: Flytta data till och från lagring
