--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -106,6 +106,8 @@
               href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: Aktivera och visa mått
               href: ../common/storage-enable-and-view-metrics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: Migrera till nya lagringsmått
+              href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Exempel
       href: 'https://azure.microsoft.com/documentation/samples/?service=storage&term=queue'
 - name: Referens
