--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -421,6 +421,8 @@
           href: troubleshoot-activation-problems.md
         - name: Allokeringsfel
           href: allocation-failure.md
+        - name: Allokeringsfel – klassisk virtuell dator
+          href: allocation-failure-classic.md
         - name: Distribuera om en VM
           href: redeploy-to-new-node.md
         - name: Vanliga felmeddelanden
