--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -195,6 +195,8 @@
                   href: active-directory-b2c-reference-password-change-custom.md
                 - name: Aktivera ”Håll mig inloggad”
                   href: active-directory-b2c-reference-kmsi-custom.md
+            - name: Spåra användarbeteende
+              href: active-directory-b2c-custom-guide-eventlogger-appins.md
             - name: Felsökning
               items:
                 - name: Samla in loggar med Application Insights
