--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -43,6 +43,8 @@
       href: batch-apis-tools.md
     - name: Kvoter och begränsningar
       href: batch-quota-limit.md
+    - name: VM-storlekar som stöds
+      href: batch-pool-vm-sizes.md
 - name: Instruktionsguider
   items:
     - name: Hantera Batch-konton
@@ -108,10 +110,13 @@
           href: batch-rendering-service.md
         - name: Databearbetning med Batch och Data Factory
           href: ../data-factory/v1/data-factory-data-processing-using-batch.md?toc=%2fazure%2fbatch%2ftoc.json
-    - name: Övervaka resurser
+    - name: Övervaka Batch-lösningar
+      href: monitoring-overview.md
       items:
-        - name: Diagnostikloggning
+        - name: Använd mått och diagnostikloggar
           href: batch-diagnostics.md
+        - name: Övervaka med Application Insights
+          href: monitor-application-insights.md
         - name: 'Effektiv lista: frågor'
           href: batch-efficient-list-queries.md
     - name: Använda utvecklarverktyg
