--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -43,6 +43,8 @@
       href: container-instances-environment-variables.md
     - name: Felsöka distributioner
       href: container-instances-troubleshooting.md
+    - name: Jenkins-versionsagenter på ACI
+      href: container-instances-jenkins.md
     - name: Konfigurera datavolymer
       items:
         - name: Azure Files
