--- a/articles/monitoring/toc.yml
+++ b/articles/monitoring/toc.yml
@@ -86,8 +86,10 @@
       items:
         - name: Användning
           items:
-            - name: Lägga till en lösning
-              href: ..//log-analytics/log-analytics-add-solutions.md?toc=%2fazure%2fmonitoring%2ftoc.json
+            - name: Installera och använda lösningar
+              href: monitoring-solutions.md
+            - name: Inventering av lösningar
+              href: monitoring-solutions-inventory.md
             - name: Mållösningar
               href: ../operations-management-suite/operations-management-suite-solution-targeting.md?toc=%2fazure%2fmonitoring%2ftoc.json
         - name: Skapa
