--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -47,6 +47,8 @@
           href: sql-data-warehouse-auditing-overview.md
         - name: Kapacitetsbegränsningar
           href: sql-data-warehouse-service-capacity-limits.md
+        - name: Underhåll
+          href: service-maintenance.md
         - name: VANLIGA FRÅGOR OCH SVAR
           href: sql-data-warehouse-overview-faq.md
     - name: Säkerhet
@@ -93,6 +95,8 @@
           href: sql-data-warehouse-overview-develop.md
         - name: Komponenter för informationslager
           href: sql-data-warehouse-overview-workload.md
+        - name: Bästa praxis
+          href: sql-data-warehouse-best-practices.md
         - name: Tabeller
           items:
             - name: Översikt
@@ -143,6 +147,20 @@
       href: sql-data-warehouse-troubleshoot.md
 - name: Instruktionsguider
   items:
+    - name: Ansluta och fråga
+      items:
+        - name: Översikt
+          href: sql-data-warehouse-connect-overview.md
+        - name: Anslutningssträngar
+          href: sql-data-warehouse-connection-strings.md
+        - name: sqlcmd
+          href: sql-data-warehouse-get-started-connect-sqlcmd.md
+        - name: Fråga med SSMS
+          href: sql-data-warehouse-query-ssms.md
+        - name: Fråga med Visual Studio
+          href: sql-data-warehouse-query-visual-studio.md
+        - name: Installera Visual Studio
+          href: sql-data-warehouse-install-visual-studio.md
     - name: Uppgradera
       href: upgrade-to-latest-generation.md
     - name: Återställ
@@ -171,12 +189,8 @@
           href: sql-data-warehouse-load-from-azure-data-lake-store.md
         - name: Azure Databricks
           href: /azure/azure-databricks/databricks-extract-load-sql-data-warehouse?toc=/azure/sql-data-warehouse/toc.json
-        - name: BCP
-          href: sql-data-warehouse-load-with-bcp.md
         - name: Data Factory
           href: /azure/data-factory/load-azure-sql-data-warehouse?toc=/azure/sql-data-warehouse/toc.json
-        - name: RedGate
-          href: sql-data-warehouse-load-with-redgate.md
         - name: SSIS
           href: /sql/integration-services/load-data-to-sql-data-warehouse
     - name: Integrera
