--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -129,9 +129,12 @@
       tocHref: /azure/cloud-services/
       topicHref: /azure/cloud-services/
     - name: Cognitive Services
-      tocHref: '/azure/#pivot=products&panel=ai'
-      topicHref: '/azure/#pivot=products&panel=ai'
+      tocHref: /azure/cognitive-services/
+      topicHref: /azure/cognitive-services/
       items:
+        - name: Academic Knowledge
+          tocHref: /azure/cognitive-services/academic-knowledge/
+          topicHref: /azure/cognitive-services/academic-knowledge/home
         - name: Automatiska förslag i Bing
           tocHref: /azure/cognitive-services/Bing-Autosuggest/
           topicHref: /azure/cognitive-services/Bing-Autosuggest/
@@ -147,48 +150,72 @@
         - name: Nyhetssökning i Bing
           tocHref: /azure/cognitive-services/bing-news-search/
           topicHref: /azure/cognitive-services/bing-news-search/
+        - name: Stavningskontroll i Bing
+          tocHref: /azure/cognitive-services/bing-spell-check/
+          topicHref: /azure/cognitive-services/bing-spell-check/
         - name: Videosökning i Bing
           tocHref: /azure/cognitive-services/Bing-Video-Search/
           topicHref: /azure/cognitive-services/Bing-Video-Search/
         - name: Webbsökning i Bing
           tocHref: /azure/cognitive-services/bing-web-search/
           topicHref: /azure/cognitive-services/bing-web-search/
-        - name: Tal
-          tocHref: /azure/cognitive-services/Speech/
-          topicHref: /azure/cognitive-services/Speech/
         - name: Visuellt innehåll
           tocHref: /azure/cognitive-services/computer-vision/
           topicHref: /azure/cognitive-services/computer-vision/
+        - name: Content Moderator
+          tocHref: /azure/cognitive-services/content-moderator/
+          topicHref: /azure/cognitive-services/content-moderator/overview
         - name: Tjänst för anpassat beslut
-          tocHref: /azure/cognitive-services/custom-decision-service/custom-decision-service-overview/
-          topicHref: /azure/cognitive-services/custom-decision-service/custom-decision-service-overview/
+          tocHref: /azure/cognitive-services/custom-decision-service/
+          topicHref: /azure/cognitive-services/custom-decision-service/custom-decision-service-overview
         - name: Tjänst för anpassat tal
           tocHref: /azure/cognitive-services/custom-speech-service/
-          topicHref: /azure/cognitive-services/custom-speech-service/
+          topicHref: /azure/cognitive-services/custom-speech-service/cognitive-services-custom-speech-home
+        - name: Talarigenkänning
+          tocHref: /azure/cognitive-services/speaker-recognition/
+          topicHref: /azure/cognitive-services/speaker-recognition/home
         - name: Custom Vision Service
           tocHref: /azure/cognitive-services/custom-vision-service/
           topicHref: /azure/cognitive-services/custom-vision-service/
         - name: Känsla
-          tocHref: /azure/cognitive-services/emotion/home/
-          topicHref: /azure/cognitive-services/emotion/home/
+          tocHref: /azure/cognitive-services/emotion/
+          topicHref: /azure/cognitive-services/emotion/home
+        - name: Länkning av entiteter
+          tocHref: /azure/cognitive-services/entitylinking/
+          topicHref: /azure/cognitive-services/entitylinking/home
         - name: Ansikte
           tocHref: /azure/cognitive-services/face/
           topicHref: /azure/cognitive-services/face/
+        - name: Utforska Knowledge
+          tocHref: /azure/cognitive-services/kes/
+          topicHref: /azure/cognitive-services/kes/overview
         - name: Språkförståelse (LUIS)
           tocHref: /azure/cognitive-services/LUIS/
           topicHref: /azure/cognitive-services/LUIS/
+        - name: Språklig analys
+          tocHref: /azure/cognitive-services/linguisticanalysisapi/
+          topicHref: /azure/cognitive-services/linguisticanalysisapi/home
         - name: QnA Maker
-          tocHref: /azure/cognitive-services/qnamaker/home/
-          topicHref: /azure/cognitive-services/qnamaker/home/
+          tocHref: /azure/cognitive-services/qnamaker/
+          topicHref: /azure/cognitive-services/qnamaker/home
+        - name: Tal
+          tocHref: /azure/cognitive-services/Speech/
+          topicHref: /azure/cognitive-services/Speech/home
         - name: Textanalys
           tocHref: /azure/cognitive-services/text-analytics/
           topicHref: /azure/cognitive-services/text-analytics/
+        - name: Translator Text
+          tocHref: /azure/cognitive-services/translator/
+          topicHref: /azure/cognitive-services/translator/
+        - name: Talöversättning
+          tocHref: /azure/cognitive-services/translator-speech/
+          topicHref: /azure/cognitive-services/translator-speech/
         - name: Videoindexering
-          tocHref: /azure/cognitive-services/video-indexer/video-indexer-overview/
-          topicHref: /azure/cognitive-services/video-indexer/video-indexer-overview/
-        - name: Content Moderator
-          tocHref: /azure/cognitive-services/content-moderator/overview/
-          topicHref: /azure/cognitive-services/content-moderator/overview/
+          tocHref: /azure/cognitive-services/video-indexer/
+          topicHref: /azure/cognitive-services/video-indexer/video-indexer-overview
+        - name: Webbspråksmodell
+          tocHref: /azure/cognitive-services/web-language-model/
+          topicHref: /azure/cognitive-services/web-language-model/home
     - name: Anslutningar
       tocHref: /azure/connectors/
       topicHref: /azure/connectors/
@@ -493,6 +520,6 @@
     - name: Virtual Network
       tocHref: /azure/virtual-network/
       topicHref: /azure/virtual-network/
-    - name: VPN-gateway
+    - name: VPN Gateway
       tocHref: /azure/vpn-gateway/
       topicHref: /azure/vpn-gateway/
