--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -76,6 +76,8 @@
           href: stream-analytics-high-frequency-trading.md
         - name: Bearbeta IoT-strömningsdata
           href: stream-analytics-get-started-with-azure-stream-analytics-to-process-data-from-iot-devices.md
+        - name: Tröskelvärdesbaserade regler
+          href: stream-analytics-threshold-based-rules.md
     - name: Övervaka
       items:
         - name: Övervaka jobb – Azure Portal
