--- a/articles/virtual-machines/linux/index.yml
+++ b/articles/virtual-machines/linux/index.yml
@@ -3,7 +3,7 @@ documentType: LandingData
 title: Virtuella Linux-datorer
 metadata:
   document_id: 44409b3f-ab8c-053d-cdf4-5d7e823a275f
-  title: "Dokumentation om virtuella Linux-datorer i Azure - självstudier, API-referens"
+  title: Dokumentation om virtuella Linux-datorer i Azure - självstudier, API-referens
   meta.description: Learn how to create a virtual machine using the Linux distribution of your choice. Documentation shows different ways to create VM templates.
   services: virtual-machines\linux
   author: czeumault
@@ -14,13 +14,13 @@ metadata:
   ms.topic: landing-page
   ms.date: 01/23/2017
   ms.author: carolz
-  ms.openlocfilehash: 41531cf8ea7d4f94caafac0fd2ecaa1902eb8988
-  ms.sourcegitcommit: 48fce90a4ec357d2fb89183141610789003993d2
+  ms.openlocfilehash: 374e6a75d9ddfb5765418b1044dc525f14f86f67
+  ms.sourcegitcommit: ca05dd10784c0651da12c4d58fb9ad40fdcd9b10
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/12/2018
+  ms.lasthandoff: 05/03/2018
 abstract:
-  description: "Virtuella Linux-datorer i Azure tillhandahåller en säker, virtualiserad infrastruktur på begäran och med hög skalbarhet med hjälp av Red Hat, Ubuntu eller valfri annan Linux-distribution. Lär dig hur du skapar, konfigurerar, hanterar, uppdaterar och skalar virtuella Linux-datorer med våra snabbstarter, självstudier och exempel."
+  description: Virtuella Linux-datorer i Azure tillhandahåller en säker, virtualiserad infrastruktur på begäran och med hög skalbarhet med hjälp av Red Hat, Ubuntu eller valfri annan Linux-distribution. Lär dig hur du skapar, konfigurerar, hanterar, uppdaterar och skalar virtuella Linux-datorer med våra snabbstarter, självstudier och exempel.
   aside:
     image:
       alt: 
@@ -31,10 +31,10 @@ abstract:
     href: https://azure.microsoft.com/resources/videos/create-linux-virtual-machine/
     width: 250
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du distribuerar en NGINX-webbserver i en virtuell dator som kör Ubuntu:"
+    text: 'Lär dig hur du distribuerar en NGINX-webbserver i en virtuell dator som kör Ubuntu:'
   - type: list
     style: icon48
     items:
@@ -50,10 +50,10 @@ sections:
         src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg
       text: Azure PowerShell
       href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-linux-quick-create-powershell?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig att distribuera, hantera och skala virtuella Linux-datorer på Azure"
+    text: Lär dig att distribuera, hantera och skala virtuella Linux-datorer på Azure.
   - type: list
     style: ordered
     items:
@@ -61,34 +61,35 @@ sections:
     - html: <a href="/azure/virtual-machines/linux/tutorial-manage-disks">Skapa och hantera virtuella datordiskar</a></li>
     - html: <a href="/azure/virtual-machines/linux/tutorial-automate-vm-deployment">Automatisera konfiguration av virtuella datorer</a>
     - html: <a href="/azure/virtual-machines/linux/tutorial-custom-images">Skapa anpassade avbildningar av en virtuell dator</a>
-    - html: "<a href=\"/azure/virtual-machines/linux/tutorial-availability-sets\">Skapa virtuella datorer med hög tillgänglighet</a>"
-    - html: "<a href=\"/azure/virtual-machines/linux/tutorial-create-vmss\">Skapa en VM-skalningsuppsättning</a>"
-    - html: "<a href=\"/azure/virtual-machines/linux/tutorial-load-balancer\">Belastningsutjämna virtuella datorer</a>"
-    - html: "<a href=\"/azure/virtual-machines/linux/tutorial-virtual-network\">Hantera virtuella datorer och virtuella nätverk</a>"
-    - html: "<a href=\"/azure/virtual-machines/linux/tutorial-backup-vms\">Säkerhetskopiera virtuella datorer</a>"
-    - html: "<a href=\"/azure/virtual-machines/linux/tutorial-monitoring\">Övervaka och uppdatera virtuella datorer</a>"
-    - html: "<a href=\"/azure/virtual-machines/linux/tutorial-azure-security\">Hantera säkerhet på virtuella datorer</a>"
+    - html: <a href="/azure/virtual-machines/linux/tutorial-availability-sets">Skapa virtuella datorer med hög tillgänglighet</a>
+    - html: <a href="/azure/virtual-machines/linux/tutorial-create-vmss">Skapa en VM-skalningsuppsättning</a>
+    - html: <a href="/azure/virtual-machines/linux/tutorial-load-balancer">Belastningsutjämna virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/linux/tutorial-virtual-network">Hantera virtuella datorer och virtuella nätverk</a>
+    - html: <a href="/azure/virtual-machines/linux/tutorial-backup-vms">Säkerhetskopiera virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/linux/tutorial-govern-resources">Styra virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/linux/tutorial-monitoring">Övervaka och uppdatera virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/linux/tutorial-azure-security">Hantera säkerhet på virtuella datorer</a>
     - html: <a href="/azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd">Skapa en CI/CD-infrastruktur med Jenkins, Docker och GitHub</a>
     - html: <a href="/azure/virtual-machines/linux/tutorial-build-deploy-jenkins">CI/CD med Team Services</a>
     - html: Skapa en webbserverstack med <a href="/azure/virtual-machines/linux/tutorial-lamp-stack">LAMP</a>, <a href="/azure/virtual-machines/linux/tutorial-lemp-stack">LEMP</a> eller <a href="/azure/virtual-machines/linux/tutorial-mean-stack">MEAN</a>
     - html: <a href="/azure/virtual-machines/linux/tutorial-secure-web-server">Skydda en webbserver med SSL</a>
-- title: "Kostnadsfri videoutbildning för Pluralsight"
+- title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
     style: cards
     className: cardsFTitle
     items:
-    - title: "Hantera infrastruktur på Azure"
+    - title: Hantera infrastruktur på Azure
       href: https://www.pluralsight.com/courses/managing-infrastructure-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
         href: https://www.pluralsight.com/courses/managing-infrastructure-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-    - title: "Kom igång med Azure Virtual Machines"
+    - title: Kom igång med Azure Virtual Machines
       href: https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
         href: https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-    - title: "Kom igång med IaaS-övervakning"
+    - title: Kom igång med IaaS-övervakning
       href: https://www.pluralsight.com/courses/azure-iaas-monitoring-management-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
@@ -96,7 +97,7 @@ sections:
 - title: Exempel
   items:
   - type: paragraph
-    text: "Distribuera din första app till Azure."
+    text: Distribuera din första app till Azure.
   - type: list
     style: unordered
     className: spaced noBullet
@@ -111,7 +112,7 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/cli/azure/vm">Azure CLI</a></p><p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p>
-    - title: "Språk"
+    - title: Språk
       html: <p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>
     - title: REST
       html: <p><a href="/rest/api/compute">REST API-referens</a></p>
