--- a/articles/virtual-machines/windows/index.yml
+++ b/articles/virtual-machines/windows/index.yml
@@ -3,7 +3,7 @@ documentType: LandingData
 title: Dokumentation om virtuella Windows-datorer
 metadata:
   document_id: 1d98d530-28c7-635f-d41b-8da3ae02970c
-  title: "Dokumentation om virtuella Windows-datorer i Azure – självstudier, API-referens"
+  title: Dokumentation om virtuella Windows-datorer i Azure – självstudier, API-referens
   meta.description: Learn how to create Windows virtual machines. Documentation helps you plan, deploy, and manage a virtual machine computing environment in the cloud.
   services: virtual-machines\windows
   author: czeumault
@@ -14,13 +14,13 @@ metadata:
   ms.topic: landing-page
   ms.date: 01/23/2017
   ms.author: carolz
-  ms.openlocfilehash: 91e400e46befa5664b0224d87948bf83ebbcc309
-  ms.sourcegitcommit: 48fce90a4ec357d2fb89183141610789003993d2
+  ms.openlocfilehash: 0d92316cc736d7e52be6234a07b04b06c5f3da36
+  ms.sourcegitcommit: ca05dd10784c0651da12c4d58fb9ad40fdcd9b10
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/12/2018
+  ms.lasthandoff: 05/03/2018
 abstract:
-  description: "Virtuella Windows-datorer i Azure tillhandahåller en säker, virtualiserad infrastruktur på begäran och med hög skalbarhet med hjälp av Windows Server. Lär dig hur du skapar, konfigurerar, hanterar och skalar virtuella Windows-datorer med våra snabbstarter, självstudier och exempel."
+  description: Virtuella Windows-datorer i Azure tillhandahåller en säker, virtualiserad infrastruktur på begäran och med hög skalbarhet med hjälp av Windows Server. Lär dig hur du skapar, konfigurerar, hanterar och skalar virtuella Windows-datorer med våra snabbstarter, självstudier och exempel.
   aside:
     image:
       alt: 
@@ -31,10 +31,10 @@ abstract:
     href: https://azure.microsoft.com/resources/videos/create-windows-server-virtual-machine/
     width: 250
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du distribuerar en IIS-webbserver i en virtuell dator som kör Windows Server 2016:"
+    text: 'Lär dig hur du distribuerar en IIS-webbserver i en virtuell dator som kör Windows Server 2016:'
   - type: list
     style: icon48
     items:
@@ -51,7 +51,7 @@ sections:
       text: Azure CLI
       href: https://docs.microsoft.com/azure/virtual-machines/virtual-machines-windows-quick-create-cli?toc=/azure/virtual-machines/windows/toc.json
   - type: paragraph
-    text: "Lär dig hur du distribuerar kontinuerligt:"
+    text: 'Lär dig hur du distribuerar kontinuerligt:'
   - type: list
     style: icon48
     items:
@@ -59,10 +59,10 @@ sections:
         src: https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg
       text: VSTS
       href: https://docs.microsoft.com/vsts/build-release/apps/cd/deploy-webdeploy-iis-deploygroups?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig att distribuera, hantera och övervaka virtuella Windows-datorer på Azure"
+    text: Lär dig att distribuera, hantera och övervaka virtuella Windows-datorer på Azure.
   - type: list
     style: ordered
     items:
@@ -70,17 +70,18 @@ sections:
     - html: <a href="/azure/virtual-machines/windows/tutorial-manage-data-disk">Skapa och hantera virtuella datordiskar</a>
     - html: <a href="/azure/virtual-machines/windows/tutorial-automate-vm-deployment">Automatisera konfiguration av virtuella datorer</a>
     - html: <a href="/azure/virtual-machines/windows/tutorial-custom-images">Skapa anpassade avbildningar av en virtuell dator</a>
-    - html: "<a href=\"/azure/virtual-machines/windows/tutorial-availability-sets\">Skapa virtuella datorer med hög tillgänglighet</a>"
-    - html: "<a href=\"/azure/virtual-machines/windows/tutorial-create-vmss\">Skapa en VM-skalningsuppsättning</a>"
-    - html: "<a href=\"/azure/virtual-machines/windows/tutorial-load-balancer\">Belastningsutjämna virtuella datorer</a>"
-    - html: "<a href=\"/azure/virtual-machines/windows/tutorial-virtual-network\">Hantera virtuella datorer med virtuella nätverk</a>"
-    - html: "<a href=\"/azure/virtual-machines/windows/tutorial-backup-vms\">Säkerhetskopiera virtuella datorer</a>"
-    - html: "<a href=\"/azure/virtual-machines/windows/tutorial-monitoring\">Övervaka virtuella datorer</a>"
-    - html: "<a href=\"/azure/virtual-machines/windows/tutorial-azure-security\">Hantera säkerhet på virtuella datorer</a>"
-    - html: "<a href=\"/azure/virtual-machines/windows/tutorial-vsts-iis-cicd\">Skapa en pipeline för kontinuerlig integrering med Visual Studio</a>"
+    - html: <a href="/azure/virtual-machines/windows/tutorial-availability-sets">Skapa virtuella datorer med hög tillgänglighet</a>
+    - html: <a href="/azure/virtual-machines/windows/tutorial-create-vmss">Skapa en VM-skalningsuppsättning</a>
+    - html: <a href="/azure/virtual-machines/windows/tutorial-load-balancer">Belastningsutjämna virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/windows/tutorial-virtual-network">Hantera virtuella datorer med virtuella nätverk</a>
+    - html: <a href="/azure/virtual-machines/windows/tutorial-backup-vms">Säkerhetskopiera virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/windows/tutorial-govern-resources">Styra virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/windows/tutorial-monitoring">Övervaka virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/windows/tutorial-azure-security">Hantera säkerhet på virtuella datorer</a>
+    - html: <a href="/azure/virtual-machines/windows/tutorial-vsts-iis-cicd">Skapa en pipeline för kontinuerlig integrering med Visual Studio</a>
     - html: <a href="/azure/virtual-machines/windows/tutorial-iis-sql">Installera en SQL\IIS\.NET-stack</a>
     - html: <a href="/azure/virtual-machines/windows/tutorial-secure-web-server">Skydda en webbserver med SSL</a>
-- title: "Kostnadsfri videoutbildning för Pluralsight"
+- title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
     style: cards
@@ -91,12 +92,12 @@ sections:
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
         href: https://www.pluralsight.com/courses/managing-infrastructure-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-    - title: "Komma igång med Virtual Machines"
+    - title: Komma igång med Virtual Machines
       href: https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
         href: https://www.pluralsight.com/courses/azure-vms-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-    - title: "Komma igång med IaaS-övervakning"
+    - title: Komma igång med IaaS-övervakning
       href: https://www.pluralsight.com/courses/azure-iaas-monitoring-management-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
@@ -104,7 +105,7 @@ sections:
 - title: Exempel
   items:
   - type: paragraph
-    text: "Distribuera din första app till Azure."
+    text: Distribuera din första app till Azure.
   - type: list
     style: unordered
     className: spaced noBullet
@@ -119,7 +120,7 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/vm">Azure CLI</a></p>
-    - title: "Språk"
+    - title: Språk
       html: <p><a href="/dotnet/api/microsoft.azure.management.compute">.NET</a></p><p><a href="/java/api">Java</a></p><p><a href="https://azure.microsoft.com/develop/nodejs/#azure-sdk">Node.js</a></p><p><a href="https://azure.microsoft.com/develop/python/">Python</a></p>
     - title: REST
       html: <p><a href="/rest/api/compute">Compute REST API-referens</a></p>
